# speech-classifier-affirmation-negation

./: .gitignore  README.md  conda.yml  inference.py  main.py  pyproject.toml  requirements.txt  trainer.py
lightning_logs/version_0/: events.out.tfevents.1694638464.Thinker-Laptop.161976.0
models/: model.py
tests/: test.py
utils/: augmentations.py  features.py
